fix: broken layout if more than 3 images on page2

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,6 +74,11 @@
     width: 100%;
 }
 
+.selectable-image {
+    margin-bottom: 1.5em;
+    border: 3px solid white;
+}
+
 .selected-image {
     border: 3px solid black;
 }
